--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>UMass Dining | America's #1 Ranked Campus Dining</title>
+    <meta name="description" content="UMass Dining - America's #1 ranked campus dining program. Browse menus from Worcester, Franklin, Berkshire, and Hampshire dining commons. Get personalized meal recommendations at UMass Amherst." />
+    <meta name="keywords" content="UMass dining, UMass Amherst, dining halls, campus food, Worcester dining, Franklin dining, Berkshire dining, Hampshire dining, college food" />
+    <meta name="author" content="UMass Dining Services" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="UMass Dining | America's #1 Ranked Campus Dining" />
+    <meta property="og:description" content="Discover daily menus and get personalized meal recommendations at UMass Amherst's award-winning dining commons." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:site" content="@UMassDining" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <link rel="canonical" href="https://dining.umass.edu" />
   </head>
 
   <body>
