--- a/index.html
+++ b/index.html
@@ -3,19 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UMass Dining | America's #1 Ranked Campus Dining</title>
-    <meta name="description" content="UMass Dining - America's #1 ranked campus dining program. Browse menus from Worcester, Franklin, Berkshire, and Hampshire dining commons. Get personalized meal recommendations at UMass Amherst." />
-    <meta name="keywords" content="UMass dining, UMass Amherst, dining halls, campus food, Worcester dining, Franklin dining, Berkshire dining, Hampshire dining, college food" />
-    <meta name="author" content="UMass Dining Services" />
+    <title>UMass Dining | Personalized Meal Recommendations</title>
+    <meta name="description" content="Personalized meal recommendations for UMass Amherst dining halls. Browse daily menus from Worcester, Franklin, Berkshire, and Hampshire dining commons." />
+    <meta name="keywords" content="UMass dining, UMass Amherst, dining halls, campus food, Worcester dining, Franklin dining, Berkshire dining, Hampshire dining" />
+    <meta name="author" content="UMass Dining Platform" />
 
-    <meta property="og:title" content="UMass Dining | America's #1 Ranked Campus Dining" />
-    <meta property="og:description" content="Discover daily menus and get personalized meal recommendations at UMass Amherst's award-winning dining commons." />
+    <meta property="og:title" content="UMass Dining | Personalized Meal Recommendations" />
+    <meta property="og:description" content="Discover daily menus and get personalized meal recommendations at UMass Amherst dining commons." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@UMassDining" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="UMass Dining | Personalized Meal Recommendations" />
 
     <link rel="canonical" href="https://dining.umass.edu" />
   </head>
